# speedwave

./: .env.example  .gitignore  .gitleaksignore  .lintstagedrc.json  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  commitlint.config.js  package-lock.json  package.json  release-please-config.json
.claude/rules/: documentation.md  engineering-principles.md  git-workflow.md  logging.md  mcp-servers.md  rust-style.md  security.md
.claude/scripts/: plan-loop-code-review-schema.json  plan-loop-review-schema.json  plan-loop-verify-schema.json  plan-loop.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backmerge.yml  claude-code-review.yml  claude.yml  dependabot-auto-rebase.yml  desktop-build.yml  desktop-release.yml  merge-strategy-check.yml  pr-title.yml  release-please-lockfile.yml  release-please.yml  test.yml
.husky/: pre-commit
THIRD-PARTY-LICENSES/: appimage-runtime-LICENSE  appimage-runtime-NOTICE
_tests/ci/: validate-pr-title-main.bats
_tests/desktop/: bundle-build-context.bats  desktop-build.bats  info-plist.bats  release-workflow-signing.bats  sign-bundled-binaries.bats  updater-config.bats  verify-bundled-assets.bats  verify-release-assets.bats  version-consistency.bats
_tests/e2e/: e2e-vm-excludes.bats  setup.bash  speedwave.bats
_tests/entrypoint/: entrypoint.bats  install-claude.bats  statusline.bats
containers/: .gitignore  Containerfile.claude  compose.template.yml  entrypoint.sh  install-claude.sh
containers/claude-resources/: CLAUDE.md  settings.json  statusline.sh
containers/mcp-servers/: Containerfile.mcp  Containerfile.mcp-base
crates/speedwave-cli/: Cargo.toml
crates/speedwave-cli/src/: main.rs
crates/speedwave-runtime/: Cargo.toml
crates/speedwave-runtime/src/: addon.rs  binary.rs  build.rs  bundle.rs  compose.rs  config.rs  consts.rs  defaults.rs  fs_security.rs  lib.rs  log_sanitizer.rs  os_prereqs.rs  plugin.rs  project.rs  prompts.rs  resources.rs  signing.rs  slash.rs  update.rs  validation.rs
crates/speedwave-runtime/src/runtime/: lima.rs  mod.rs  nerdctl.rs  wsl.rs
crates/speedwave-runtime/src/session/: mod.rs  queue.rs
crates/speedwave-runtime/src/stream/: entry_index.rs  mod.rs  msg_store.rs  patch.rs  session_stress_test.rs  state_tree.rs
crates/speedwave-runtime/tests/: data_dir_integration.rs
design-proposals/: 06-terminal-minimal.html
desktop/: .gitignore
desktop/e2e/: .gitignore  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
desktop/src/: angular.json  eslint.config.js  package-lock.json  package.json  tsconfig.spec.json  vitest.config.ts
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/packaging/linux/: apparmor-rootlesskit.profile
desktop/src-tauri/src/: auth.rs  auth_commands.rs  chat.rs  container_logs_cmd.rs  containers_cmd.rs  diagnostics.rs  fs_perms.rs  git_cmd.rs  health.rs  history.rs  http_util.rs  ide_bridge.rs  integrations_cmd.rs  llm_cmd.rs  log_commands.rs  log_file.rs  logging_cmd.rs  main.rs  mcp_os_process.rs  oauth_cmd.rs  patch_emitter.rs  plugin_cmd.rs  queue_cmd.rs  reconcile.rs  redmine_api_cmd.rs  retry_cmd.rs  setup_wizard.rs  slash_cmd.rs  subscribe_cmd.rs  tray.rs  types.rs  update_commands.rs  updater.rs  url_validation.rs  window.rs
desktop/src-tauri/tests/fixtures/: control_request_turn.ndjson  full_turn.ndjson  slash_command_turn.ndjson
docs/: README.md
docs/accessibility/: contrast-report.md
docs/adr/: ADR-000-product-principles.md  ADR-001-eliminate-docker-desktop.md  ADR-002-lima-as-vm-manager-on-macos.md  ADR-003-bundled-nerdctl-full-on-linux.md  ADR-004-wsl2-and-nerdctl-on-windows.md  ADR-005-two-interfaces-cli-and-desktop.md  ADR-006-chat-ui-via-stream-json.md  ADR-007-ide-bridge-as-proxy.md  ADR-008-no-background-daemon.md  ADR-009-per-project-isolation-preserved.md  ADR-010-mcp-os-as-host-process-per-platform.md  ADR-011-user-configuration-passed-to-claude-code.md  ADR-012-github-as-ci-cd-and-distribution-platform.md  ADR-013-mcp-os-as-host-process-implementation.md  ADR-014-ide-bridge-three-mechanisms-per-platform.md  ADR-015-addon-system-open-core-model.md  ADR-015-plugin-system.md  ADR-016-cross-platform-cli-path.md  ADR-017-claude-code-in-container-via-entrypoint.md  ADR-018-llm-provider-switching-proxy-as-container.md  ADR-019-git-branching-model-and-release-flow.md  ADR-020-legal-compliance-and-license-analysis.md  ADR-021-bundled-dependencies-and-zero-install-strategy.md  ADR-022-bundled-claude-resources-and-project-coexistence.md  ADR-023-appimage-static-runtime-for-fuse-independence.md  ADR-024-e2e-testing-strategy.md  ADR-024-native-directory-structure.md  ADR-025-linux-deb-packaging.md  ADR-025-tauri-over-electron.md  ADR-026-linux-rootless-container-user.md  ADR-027-native-directory-structure.md  ADR-028-tauri-over-electron.md  ADR-029-sandbox-prototype-chain-hardening.md  ADR-030-bundle-reconcile-after-app-update.md  ADR-031-data-dir-env-var-for-instance-isolation.md  ADR-032-nested-virtualization-resilience.md  ADR-033-permission-autofix-on-startup.md  ADR-034-mcp-error-guidance-and-init-retry.md  ADR-035-mcp-spec-compliance-streamable-http.md  ADR-036-self-declaring-worker-policy.md  (+11 more)
docs/architecture/: README.md  (+4 more)
mcp-servers/: .gitignore  eslint.config.js  package-lock.json  package.json  vitest.workspace.ts
scripts/: build-native-macos.sh  bundle-build-context.ps1  bundle-build-context.sh  bundle-native-assets.sh  check-version-consistency.py  create-desktop-stubs.sh  diagnose-cli.sh  e2e-common.sh  e2e-vm-setup.sh  e2e-vm.sh  sign-bundled-binaries.sh  validate-pr-title-main.sh  verify-bundled-assets.sh  verify-release-assets.sh
swift-calendar/: Package.swift
swift-mail/: Package.swift
swift-notes/: Package.swift
(+650 files in other folders)
