[package]
name = "speedwave-cli"
version = "0.6.1"
edition = "2021"
publish = false
description = "CLI client for Speedwave — interactive Claude Code in a terminal"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "speedwave"
path = "src/main.rs"

[dependencies]
speedwave-runtime = { path = "../speedwave-runtime" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
self_update = { version = "0.44", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "reqwest", "rustls"] }
semver = "1"
log = { workspace = true }
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
