[package]
name = "speedwave-runtime"
version = "0.0.2"
edition = "2021"
publish = false
description = "Container runtime abstraction for Speedwave (Lima, nerdctl, WSL2)"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = { workspace = true }
regex = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
