[package]
name = "speedwave-runtime"
version = "0.6.0"
edition = "2021"
publish = false
description = "Container runtime abstraction for Speedwave (Lima, nerdctl, WSL2)"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
fs2 = "0.4"
log = { workspace = true }
regex = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.11"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
